# ai-chat-backend

./: .env.sample  .gitignore  README.md  api_documentation_auth.md  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/database/: collections.py  mongodb.py
app/middleware/: auth_middleware.py
app/models/: chat_model.py  otp_model.py  token_model.py  user_model.py
app/routes/: auth_routes.py  chat_routes.py  chat_ws.py  health_routes.py  user_routes.py
app/schemas/: auth_schema.py  chat_schema.py  response_schema.py  user_schema.py
app/services/: ai_service.py  auth_service.py  chat_service.py  email_service.py  google_service.py  jwt_service.py  otp_service.py  sms_service.py  user_service.py
app/utils/: validators.py
