[project]
name = "ai-chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pymongo",
    "python-dotenv",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "PyJWT",
    "python-multipart",
    "email-validator",
    "pydantic-settings",
    "google-auth",
    "requests",
]
